pushed full working project

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,9 @@
 SECRET_KEY=your_django_secret
 
 # Debug mode
-DEBUG=True
+DEBUG=True    # for checking in development]
+# DEBUG = False    # for production
+
 
 # Allowed hosts
 ALLOWED_HOSTS=127.0.0.1,localhost
